--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-mongodb": "*",
         "intervention/image-laravel": "^1.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
+        "mongodb/mongodb": "^1.20",
         "surfsidemedia/shoppingcart": "^1.0"
     },
     "require-dev": {
